@@ -74,3 +74,5 @@ __MAHOUT-1181: Adding StreamingKMeans MapReduce classes (dfilimon)
   MAHOUT-1182: Remove useless append (Dave Brosius via tdunning)
 
   MAHOUT-1176: Introduce a changelog file to raise contributors attribution (ssc)
+
+  MAHOUT-1108: Allows cluster-reuters.sh example to be executed on a cluster (elmer.garduno via gsingers) 
